--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "repairevil",
-  "version": "1.0.0",
-  "description": "",
+  "name": "Repairevil",
+  "version": "2.0.0",
+  "description": "A bootstrap project for create games with Phaser + ES6 + Webpack.",
+  "author": "leandro cabrera <leandcabrera@gmail.com>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack",
+    "deploy": ""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Wolf-Rost/Repairevil.git"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.2",
+    "browser-sync": "^2.18.13",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "eslint": "^5.5.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "expose-loader": "^0.7.3",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Wolf-Rost/Repairevil/issues"
-  },
-  "homepage": "https://github.com/Wolf-Rost/Repairevil#readme",
   "dependencies": {
-    "seedrandom": "^3.0.5"
+    "phaser": "^3.0.0-beta.4",
+    "webfontloader": "^1.6.28"
   }
 }
