--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
-    "phaser": "^3.0.0-beta.4",
+    "phaser": "3.21.0",
     "seedrandom": "^3.0.5",
     "webfontloader": "^1.6.28"
   }
