--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "phaser": "3.21.0",
+        "phaser3-rex-plugins": "^1.1.7",
         "seedrandom": "^3.0.5",
         "webfontloader": "^1.6.28"
     },
